Changes for baconbird:

0.2:
	Made short help more contextual.

0.1 (2010-10-05):
	Initial release.